--- a/src/Components/sNavigationBar.sass
+++ b/src/Components/sNavigationBar.sass
@@ -4,21 +4,20 @@
 nav
     position: fixed
     width: var(--nav-width)
-    height: 100vh
+    height: auto
     right: 0
     font-weight: 400
     font-size: var(--general-text-size)
-    z-index: 11
-    border-left: 3px solid var(--border-c)
-    box-shadow: -2px 0px 0px var(--border-c2)
-
-.navigationBar
-    padding-top: var(--nav-top-padding)
-    text-align: right
+    margin-top: var(--nav-top-padding)
     margin-right: var(--nav-links-pading)
+    //border-left: 3px solid var(--border-c)
+    //box-shadow: -2px 0px 0px var(--border-c2)
+
+.navigationBar    
+    text-align: right    
     li
         display: block
-        margin-right: 3rem
+        margin-right: 2.5vw
         margin-bottom: .5rem
         justify-items: right
         a
